metadata/objects/SFDC_Channel_Account_Plan__c.object
<CustomObject>
    <description>High level, time bound plan outlining joint vision statements and a roadmap for success. Channel plans are created for vendors and partners.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Challenges__c</fullName>
        <label>Business Challenges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>My_Company_s_Channel_Plan__c</fullName>
        <description>Returns true when the current user&apos;s associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</description>
        <formula>Partner_Account__r.Id =  $User.Account_Id_Formula__c</formula>
        <inlineHelpText>Returns true when the current user&apos;s associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</inlineHelpText>
        <label>My Company&apos;s Channel Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Account Plans</relationshipLabel>
        <relationshipName>ChannelAccountPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>TextArea</type>
    </fields>
    <label>Channel Plan</label>
    <listViews>
        <fullName>Active_Future_Channel_Plans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Company_s_Channel_Plan__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planning,Pending,Approved,In Progress</value>
        </filters>
        <label>Active &amp; Future Channel Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Target__c</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Plans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Plans_Company</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Company_s_Channel_Plan__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Company&apos;s Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Channel Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>